--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,8 +9,8 @@
 
 
  .bondBox {
-  display:flex;
-  flex-direction: row;
+  display: grid;
+ grid-template-columns: repeat(3, 1fr);
   gap: 30px
   
  
@@ -20,7 +20,7 @@
   background-color: rgba(0,0,0,.5) ;
 	width: 90%;
 	margin: 20px auto ;
-	border-radius: 10px;
+	border-radius: 20px;
 
 }
 
