--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,3 +51,26 @@ border-radius: 100%
   height: 250px;
   width:200px
 }
+
+form {
+  background-color: black;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: left;
+  width: 20em;
+  min-height: 10em;
+  margin: 2em auto;
+  border-radius: 0.25em;
+  color:white
+}
+
+form input {
+  display:block;
+  padding: 0.50em;
+}
+
+.formButton {
+margin-top: 20px
+}
