--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,6 +20,16 @@
 margin-top: 250px;
 border-radius: 100%
 }
+audio::-webkit-media-controls-enclosure {
+  background-color:#959595;
+}
+.audioControls {
+  display:flex;
+  width:10rem;
+  height: 10rem;
+
+}
+
 
 .homeButtons {
   margin-right: 20px;
@@ -138,17 +148,17 @@ p {
   }
 
 .formContainer {
- margin-top: 200px
+ margin-top: 165px;
 }
 form {
-  background-image: url(https://www.maxpixel.net/static/photo/1x/Gradation-Blue-Background-Geomatri-Form-4876988.jpg);
+  background-image: url(https://media.istockphoto.com/photos/background-picture-id465101247?k=20&m=465101247&s=612x612&w=0&h=dHPuBSWDrWI2j9zsiFytVFSVVzVZxAK5p9hdjt8QS_k=);
   padding: 1em;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: left;
-  width: 20em;
-  min-height: 10em;
+  width: 30em;
+  height: 40em;
   margin: 2em auto;
   border-radius: 0.25em;
   color:white;
@@ -157,16 +167,19 @@ form {
 
 form input {
   display:block;
-  padding: .50em;
+  padding: .75em;
+  font-size: 18px 
   
 }
 
 .labels {
   text-align: left;
    padding: 5px;
-  font-weight: bolder}
+  font-weight: bolder;
+font-size:18px}
 
 
 .formButton {
-margin-top: 20px
+margin: 10px 0 20px 10px;
+border-radius: 15%
 }
