--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,8 @@
   display: block;
   justify-content: center;
   background-color:black;
-  height: 50px
+  height: 50px;
+  overflow:visible
 
 }
 .navButtons {
@@ -63,7 +64,7 @@ audio::-webkit-media-controls-enclosure {
   flex-direction: column;
   align-items:center;
   background-color: rgba(0,0,0,.5) ;
-	width: 90%;;
+	width: 80%;;
 	margin: 20px auto ;
 	border-radius: 20px;
   color:white;
@@ -71,17 +72,19 @@ audio::-webkit-media-controls-enclosure {
 }
 
 .imageBox {
-  height:190px;
-  width: 250px;
+  height: 12em;
+  width: 85%;
   border-radius: 20%;
 
 }
 
 .movieBox {
   display: grid;
- grid-template-columns: repeat(4, 1fr);
+ grid-template-columns: repeat(3, 1fr);
   gap: 50px;
-  margin-top: 30px
+  margin: 60px 25px 30px 30px;
+
+
 }
 
 .movieCard {
@@ -89,8 +92,8 @@ audio::-webkit-media-controls-enclosure {
   flex-direction: column;
   align-items:center;
   background-color: rgba(0,0,0,.5) ;
-	width: 90%;
-	margin: 20px auto ;
+	width: 80%;
+	margin: 0 auto ;
 	border-radius: 20px;
   color:white;
   border: 10px solid black;
@@ -100,7 +103,8 @@ audio::-webkit-media-controls-enclosure {
 
 .posterBox {
   height: 250px;
-  width:200px
+  width:175px;
+  margin-top:20px
 }
 
  .villainBox {
@@ -120,6 +124,8 @@ audio::-webkit-media-controls-enclosure {
 	border-radius: 20px;
   color:white;
 }
+
+
 
 .descriptionBox {
   background-color:rgb(50, 48, 48);
