fixed villain styling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,6 +123,7 @@ audio::-webkit-media-controls-enclosure {
   border: 10px solid black;
 	border-radius: 20px;
   color:white;
+  text-align:center
 }
 
 
